--- a/src/main/resources/.env.example
+++ b/src/main/resources/.env.example
@@ -1,3 +1,5 @@
+SPRING_SECURITY_LOGGING_LEVEL=TRACE
+
 DB_URL=jdbc:mysql://localhost:3306/final_assessment_logistics_warehouse
 DB_USER=root
 DB_PASSWORD=password
