--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 logging.level.com.riwi.final_assessment_logistics_warehouse=DEBUG
+logging.level.org.springframework.security=${SPRING_SECURITY_LOGGING_LEVEL}
 
 jwt.secret-key=${JWT_SECRET_KEY}
 jwt.expiration-time=${JWT_EXPIRATION_TIME}
