refactor: use a dedicated application property to seed the default user admin

--- a/src/main/resources/.env.example
+++ b/src/main/resources/.env.example
@@ -9,3 +9,6 @@ JWT_EXPIRATION_TIME="300000"
 
 MAIL_USERNAME="my.gmail@gmail.com"
 MAIL_PASSWORD="my gmail app password"
+
+SEEDERS_ADMIN_USER_EMAIL="john@gmail.com"
+SEEDERS_ADMIN_USER_PASSWORD="John12345*"
