--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+seeders.users.admin-user.email=${SEEDERS_ADMIN_USER_EMAIL}
+seeders.users.admin-user.password=${SEEDERS_ADMIN_USER_PASSWORD}
